--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
             <section class="resume-section" id="interests">
                 <div data-aos="fade-left" class="resume-section-content">
                     <h2 data-aos="fade-up" class="mb-5">Interessses</h2>
-                    <p>Além de ser um desenvolvedor web, eu aproveito a maior parte do meu tempo estando ao ar livre. Jogando bola, Viajando, Praias...
+                    <p>Além de ser um desenvolvedor web, eu aproveito a maior parte do meu tempo estando ao ar livre, na praia, ou piscina...
                     </p>
                     <p class="mb-0">Quando fico dentro de casa, sigo assistindo varios filmes e programas de televisão do gênero ficção científica e fantasia, sou um aspirante a programação e passo grande parte do meu tempo livre explorando os últimos avanços tecnológicos no mundo do desenvolvimento da web de vanguarda.
                     </p>
