--- a/index.html
+++ b/index.html
@@ -114,8 +114,8 @@
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div data-aos="fade-left" class="flex-grow-1">
                             <h3 class="mb-0">UNINASSAU</h3>
-                            <div class="subheading mb-3">Bacharelado incompleto em Sistemas de Informação</div>
-                            //<div>Analise e Desenvolvimento de Sistemas (incompleto)</div>
+                            <div class="subheading mb-3">Bacharelando em Sistemas de Informação (incompleto)</div>
+<!--                             <div>Analise e Desenvolvimento de Sistemas (incompleto)</div> -->
                             
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">Jan 2016 - Dez 2020</span></div>
